syntax = "proto3";

package bookmanagement;

option go_package = "gc-buku/proto;proto";

service BookService {
  rpc CreateUser (CreateUserRequest) returns (CreateUserResponse);
  rpc GetUser (GetUserRequest) returns (GetUserResponse);
  rpc CreateBook (CreateBookRequest) returns (CreateBookResponse);
  rpc GetBook (GetBookRequest) returns (GetBookResponse);
  rpc UpdateBook (UpdateBookRequest) returns (UpdateBookResponse);
  rpc DeleteBook (DeleteBookRequest) returns (DeleteBookResponse);
  rpc BorrowBook (BorrowBookRequest) returns (BorrowBookResponse);
  rpc ReturnBook (ReturnBookRequest) returns (ReturnBookResponse);
  rpc Login (LoginRequest) returns (LoginResponse);
}

message User {
  string id = 1;
  string username = 2;
  string password = 3;
}

message Book {
  string id = 1;
  string title = 2;
  string author = 3;
  string published_date = 4;
  string status = 5;
  string user_id = 6;
}

message BorrowedBook {
  string id = 1;
  string book_id = 2;
  string user_id = 3;
  string borrowed_date = 4;
  string return_date = 5;
}

message CreateUserRequest {
  User user = 1;
}

message CreateUserResponse {
  User user = 1;
}

message GetUserRequest {
  string id = 1;
}

message GetUserResponse {
  User user = 1;
}

message CreateBookRequest {
  Book book = 1;
}

message CreateBookResponse {
  Book book = 1;
}

message GetBookRequest {
  string id = 1;
}

message GetBookResponse {
  Book book = 1;
}

message UpdateBookRequest {
  Book book = 1;
}

message UpdateBookResponse {
  Book book = 1;
}

message DeleteBookRequest {
  string id = 1;
}

message DeleteBookResponse {
  string id = 1;
}

message BorrowBookRequest {
  BorrowedBook borrowed_book = 1;
}

message BorrowBookResponse {
  BorrowedBook borrowed_book = 1;
}

message ReturnBookRequest {
  string id = 1;
}

message ReturnBookResponse {
  BorrowedBook borrowed_book = 1;
}

message LoginRequest {
  string username = 1;
  string password = 2;
}

message LoginResponse {
  string token = 1;
  User user = 2;
}